# digesting_feed

./: .env  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  Makefile  README.md  archives.html  daily_2025-10-09.html  daily_2025-10-10.html  daily_2025-10-11.html  daily_2025-10-12.html  daily_2025-10-13.html  daily_2025-10-14.html  daily_2025-10-15.html  daily_2025-10-16.html  daily_2025-10-17.html  daily_2025-10-18.html  daily_2025-10-19.html  daily_2025-10-20.html  history_report.html  index.html  pyproject.toml  requirements.txt
.github/actions/checkout-repo/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: deploy-pages.yaml  pr-checks.yaml  update_digest.yaml
_site/: history_report.html
_site/archives/: daily_2025-10-09.html  daily_2025-10-10.html  daily_2025-10-11.html  daily_2025-10-13.html  daily_2025-10-14.html  daily_2025-10-15.html  daily_2025-10-16.html  daily_2025-10-18.html
archives/: daily_2025-10-12.html  daily_2025-10-17.html  daily_2025-10-19.html  daily_2025-10-20.html  daily_2025-10-21.html  daily_2025-10-22.html  daily_2025-10-23.html  daily_2025-10-24.html  daily_2025-10-25.html  daily_2025-10-26.html  daily_2025-10-27.html  daily_2025-10-28.html  daily_2025-10-29.html  daily_2025-10-30.html  daily_2025-10-31.html  daily_2025-11-01.html  daily_2025-11-02.html  daily_2025-11-03.html  daily_2025-11-04.html  daily_2025-11-05.html  daily_2025-11-06.html  daily_2025-11-07.html  daily_2025-11-08.html  daily_2025-11-09.html  daily_2025-11-10.html  daily_2025-11-11.html  daily_2025-11-12.html  daily_2025-11-13.html  daily_2025-11-14.html  daily_2025-11-15.html  daily_2025-11-16.html  daily_2025-11-17.html  daily_2025-11-18.html  daily_2025-11-19.html  daily_2025-11-20.html  daily_2025-11-21.html  daily_2025-11-22.html  daily_2025-11-23.html  daily_2025-11-24.html  daily_2025-11-25.html  (+217 more)
digesting_feed/: archive_manager.py  cli.py  configfile.py  fetcher.py  generator.py  history_reporter.py  main.py  manage_article.py  store.py
digesting_feed/data/: articles.json
digesting_feed/data/archives/: 2025-10-09.json  2025-10-10.json  2025-10-11.json  2025-10-12.json  2025-10-13.json  2025-10-14.json  2025-10-15.json  2025-10-16.json  2025-10-17.json  2025-10-18.json  2025-10-19.json  2025-10-20.json  2025-10-21.json  2025-10-22.json  2025-10-23.json  2025-10-24.json  2025-10-25.json  2025-10-26.json  2025-10-27.json  2025-10-28.json  2025-10-29.json  2025-10-30.json  2025-10-31.json  2025-11-01.json  2025-11-02.json  2025-11-03.json  2025-11-04.json  2025-11-05.json  2025-11-06.json  2025-11-07.json  2025-11-08.json  2025-11-09.json  2025-11-10.json  2025-11-11.json  2025-11-12.json  2025-11-13.json  2025-11-14.json  2025-11-15.json  2025-11-16.json  2025-11-17.json  (+225 more)
digesting_feed/helper/: env.py  helper.py
digesting_feed/static/: template.html
tests/: test_fetcher.py  test_generator.py  test_main.py  test_manage_article.py
