[project]
requires-python = "==3.11"
name = "digesting_feed"
version = "0.1.1"
dependencies = [
    "requests",
    "feedparser",
    "jinja2",
    "beautifulsoup4",
    "sumy",
    "dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pylint",
    "black",
    "pre-commit",
    "pytest",
    "pytest-mock",
]


[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv", "build", "dist"]
