[project]
requires-python = ">=3.13"
name = "digesting_feed"
version = "0.1.1"
dependencies = [
    "requests",
    "feedparser",
    "jinja2",
    "beautifulsoup4",
    "dotenv"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pylint",
    "black",
    "pre-commit",
    "pytest",
    "pytest-mock",
]

[FORMAT]
max-line-length=100

[tool.black]
line-length = 100
target-version = ["py313"]
exclude = '''
/(
    \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["venv", "build", "dist"]
